@@ -17,7 +17,8 @@ from freezegun import freeze_time
 
 from wagtail.tests.testapp.models import (
     AbstractPage, Advert, AlwaysShowInMenusPage, BlogCategory, BlogCategoryBlogPage, BusinessChild,
-    BusinessIndex, BusinessNowherePage, BusinessSubIndex, CustomManager, CustomManagerPage,
+    BusinessIndex, BusinessNowherePage, BusinessSubIndex,
+    CustomManager, CustomManagerPage, CustomPageQuerySet,
     EventIndex, EventPage, GenericSnippetPage, ManyToManyBlogPage, MTIBasePage, MTIChildPage,
     MyCustomPage, OneToOnePage, SimplePage, SingleEventPage, SingletonPage, StandardIndex,
     TaggedPage)
@@ -1266,6 +1267,17 @@ class TestPageManager(TestCase):
         custom Manager inherits from PageManager.
         """
         self.assertIs(type(CustomManagerPage.objects), CustomManager)
+
+    def test_custom_page_queryset(self):
+        """
+        Managers that are constructed from a custom PageQuerySet
+        (via PageManager.from_queryset(CustomPageQuerySet)) should return
+        querysets of that type
+        """
+        self.assertIs(type(CustomManagerPage.objects.all()), CustomPageQuerySet)
+        self.assertIs(type(CustomManagerPage.objects.about_spam()), CustomPageQuerySet)
+        self.assertIs(type(CustomManagerPage.objects.all().about_spam()), CustomPageQuerySet)
+        self.assertIs(type(CustomManagerPage.objects.about_spam().all()), CustomPageQuerySet)
 
     def test_abstract_base_page_manager(self):
         """
